@startuml BooksDiagram
abstract class BookClient {
    - format_response(response: JsonResponse): Book[]
    - format_book(book: Book): Book
    + all(max: integer, offset: integer, subject: string): Book[]
    + byId(id: string): Book
    + byTitle(title: string, max: integer, offset: integer): Book
}

class GoogleBooksApiClient {

}

interface QueryBuilder {
  + max(max: integer): QueryBuilder
  + offset(offset: integer): QueryBuilder
  + orderBy(setting: string): QueryBuilder
  + where(field: string, value: any): QueryBuilder
  + printType(type: string): QueryBuilder
  + build(): string
}

class GoogleBooksQueryBuilder {}

BookClient <|-- GoogleBooksApiClient
QueryBuilder <|.. GoogleBooksQueryBuilder

Book *-- BookClient
@enduml